tests/rosetta/out/Zig/accumulator-factory.error
zig build: exit status 1
/tmp/accumulator-factory.zig:11:9: error: mutable 'store' not accessible from here
/tmp/accumulator-factory.zig:9:9: note: declared mutable here
/tmp/accumulator-factory.zig:10:102: note: crosses namespace boundary here
/tmp/accumulator-factory.zig:10:31: error: unused local constant
/tmp/accumulator-factory.zig:9:9: error: local variable is never mutated
/tmp/accumulator-factory.zig:9:9: note: consider using 'const'
